--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "chat-realtime",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev",    
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@ignite-ui/react": "^2.2.4",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
+    "eslint": "^8.35.0",
     "eslint-config-next": "13.2.1",
+    "express": "^4.18.2",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "styled-components": "^5.3.8",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/express": "^4.17.17",
+    "@types/styled-components": "^5.1.26"
   }
 }
